basics tools + water

--- a/Gardenguru/about.html
+++ b/Gardenguru/about.html
@@ -99,7 +99,7 @@
 
     <div class="aboutcontainer">
       <div class="image slide-in from-left">
-        <img src="/images/andrei.png">
+        <img src="images/andrei.png">
       </div>
       <div class="name slide-in from-right">
         <span class="aboutinfo">Tabacaru Andrei</span>
