--- a/Gardenguru/basics/tools.html
+++ b/Gardenguru/basics/tools.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Gardenguru - your start in gardening.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -90,134 +90,68 @@
       </ul>
     </header>
 
-    <!-- stef -->
-  <div class="underHeader">
-    <div class="messageUnderHeader">Your garden is your masterpiece.</div>
-  </div>
-
-  <div class="description_container">
-    <div class="description">
-      <div class="descriptionItem">
-        <div class="aboutTitle">About Gardenguru</div>
-        <div class="descriptionTitle">Connect with nature</div>
-        <ul>
-          <li>"If you have a garden and a library, you have everything you need"</li>
-          <li>"Flowers always make people better, happier, and more helpful; they are sunshine, food and medicine for the soul"</li>
-          <li>"Gardening is learning, learning, learning. That's the fun of them. You're always learning"</li>
-          <li>"A garden must combine the poetic and the mysterious with a feeling of serenity and joy"</li>
-        </ul>
-      </div>
-      <div class="descriptionItem">
-        <div class="aboutTitle">About Gardenguru</div>
-        <div class="descriptionTitle">What you will learn</div>
-        <ul>
-          <li>A positive outlook is absolutely essential.</li>
-          <li>Even the smallest growth is to be appreciated and celebrated.</li>
-          <li>Failure is a driving force of success.</li>
-          <li>Creativity and hard work offer great rewards.</li>
-          <li>Nothing thrives without consistent hard work and dedication.</li>
-       </ul>
-      </div>
+    
+    <div class="toolsMainContainer">
+    <div class="toolsTitle">
+        Essential gardening tools and their usage
     </div>
-  </div>
-
-
-  <div class="mainContainerIndex">
-    <div class="mainTitleIndex">
-      START WITH THE BASICS FIRST!
-    </div>
-    <div class="containerIndexBasics">
-
-    <div class="itemIndexBasics">
-       <div class="item1IndexBasics">
-            <a href="basics/tools.html"><img class="imgBasics" src="images/gardeningtools.png" alt="tools"></a>
-       </div>
-       <div class="item2IndexBasics">
-          <div class="titleIndexBasics">
-           TOOLS
-          </div>
-          <div class="descriptionIndexBasics">
-            <p>Learn about the most important gardening tools that are going to be your best friends!</p>
-            <p>Never forget your gloves, loppers, gardening fork, watering can and many more.</p>
-          </div>
-      </div>
+    <div class="toolsImgMain">
+      <img src="basicsImages/toolsMain.jpg" class="imgMainRadius" alt="">
     </div>
 
-
-    <div class="itemIndexBasics">
-      <div class="item1IndexBasics">
-        <a href="basics/water.html"><img class="imgBasics" src="images/gardeingwater.png" alt="water"></a>
-   </div>
-   <div class="item2IndexBasics">
-       <div class="titleIndexBasics">
-         WATER
-       </div>
-       <div class="descriptionIndexBasics">
-        <p>Learn about the importance of water!</p>
-        <p>The best gardeners always know the best timing and quantity!</p>
-      </div>
-  </div>
+    <div class="toolContainer">
+         <div class="imgItem">
+           <img src="basicsImages/bowrake.png" alt="">
+         </div>
+         <div class="textItem">
+             <div class="titleTool">Bow rake</div>
+             <div class="descriptionTool">
+                 <ul class="listSquare">
+                     <li>A bow rake is shaped very differently from your average leaf rake. The tines are short, only a few inches (5 to 10 cm.) long, and they are parallel to each other. The tines are perpendicular to the long, straight handle. They are strong and rigid, usually made of metal.</li>
+                     <li> There are quite a few common garden rake uses. It's good for cleaning up a lawn in the spring. Running the sharp, hard tines over the grass will both pick up any debris and pull away thickly matted, compacted dead turf.</li>
+                     <li> It's also very good for pushing around, grooming, and leveling material such as soil, mulch, gravel, and compost. The tines can be used for breaking up and spreading material, and the smooth side of the head can be used for more precision jobs of leveling the material out.</li>
+                </ul>
+             </div>
+         </div>
     </div>
 
-    <div class="itemIndexBasics">
-      <div class="item1IndexBasics" id="imgPaddingSoil">
-        <a href=""><img class="imgBasics" src="images/gardeningsoil.png" alt="soil"></a>
-   </div>
-   <div class="item2IndexBasics">
-        <div class="titleIndexBasics">
-         SOIL
-       </div>
-       <div class="descriptionIndexBasics">
-        <p>The soil is a storehouse for all the elements plants need to grow: nutrients, organic matter, air, and water</p>
-        <p>Learn how to choose the best one for your garden!</p>
-      </div>
-  </div>
-    </div>
-
-    <div class="itemIndexBasics">
-      <div class="item1IndexBasics">
-        <a href=""><img class="imgBasics" src="images/gardeningweather.png" alt="weather"></a>
-   </div>
-   <div class="item2IndexBasics">
-        <div class="titleIndexBasics">
-        WEATHER
+    <div class="toolContainer">
+        <div class="imgItem">
+          <img src="basicsImages/trowel.png" alt="">
         </div>
-        <div class="descriptionIndexBasics">
-        <p>Knowing the local climate is a key factor to successful gardening.</p>
-        <p>Always check the weather before starting to work in the garden!</p>
+        <div class="textItem">
+          <div class="titleTool">Trowel</div>
+          <div class="descriptionTool">
+              <ul class="listSquare">
+                  <li>A trowel will easily be among the most used and important tools in your arsenal.  </li>
+                  <li> It's essentially a handheld shovel that you'll use for moving soil, digging, removing weeds,mixing fertilizer and much more.</li>
+                  <li>They are also used for digging small holes, such for planting bulbs, annuals or perennials.
+                    It would take a lot of time and effort to dig a hole for a tree or shrub with a garden trowel. Garden trowels are also used to dig up weeds.</li>
+                  <li> Garden trowels come in all kinds of shapes and sizes and are typically made of a combination of plastic or wood handles with stainless steel.</li>
+             </ul>
+          </div>
         </div>
-  </div>
-    </div>
+   </div>
 
-  </div>
-  </div>
-
-  <div class="mainContainerIndex">
-    <div class="mainTitleIndex">
-      NOW CHOOSE WHAT KIND OF GARDEN YOU WANT!
+   <div class="toolContainer">
+    <div class="imgItem">
+      <img src="basicsImages/spade.png" alt="">
     </div>
-    <div class="containerIndexCategories">
-      <div class="itemIndexCategories">
-        <p class="titleIndexCategory">- Trees -</p>
-        <a href="" class="centerGrid">
-          <img class="imgCategories" src="images/treeCategory2.jpg" alt="tree">
-        </a>
-      </div>
-      <div class="itemIndexCategories">
-        <p class="titleIndexCategory">- Flowers -</p>
-        <a href="" class="centerGrid">
-          <img class="imgCategories" src="images/flowerCategory2.jpg" alt="flower">
-        </a>
-      </div>
-      <div class="itemIndexCategories">
-        <p class="titleIndexCategory">- Vegetables -</p>
-        <a href="" class="centerGrid">
-          <img class="imgCategories" src="images/vegetablesCategory2.jpeg" alt="vegetables">
-        </a>
+    <div class="textItem">
+      <div class="titleTool">Spade</div>
+      <div class="descriptionTool">
+          <ul class="listSquare">
+              <li>For jobs too big for your trowel, a spade will be your tool of choice. A spade is usually a short-handled shovel, often made with a rectangular blade and a perpendicular "D" handle for extra grip when digging.</li>
+              <li>Unlike a pointed, bowl-shaped shovel, which is best used for digging and breaking up soil, a spade is better suited for slicing through stubborn roots and moving loose soil.</li>
+              <li>The flat head design is ideal for digging holes or removing plants from the ground. It's important to note that a garden spade is better suited for loose soil that is not compacted or rocky.</li>
+         </ul>
       </div>
     </div>
-  </div>
+</div>
 
+    </div>
+
+  
 
     <div class="footer">
       <div class="footerintro">
