--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -130,11 +130,7 @@
 
     <div class="itemIndexBasics slide-in basics-from-left">
        <div class="item1IndexBasics">
-<<<<<<< HEAD
-            <a href="basics/tools.html"><img class="imgBasics" src="images/gardeningtools.png" alt="tools"></a>
-=======
           <a href=""><img class="imgBasics" src="images/gardeningtools.png" alt="tools"></a>
->>>>>>> 0eabf9fad366c2f46d54aba6e441cd6970bf8635
        </div>
        <div class="item2IndexBasics">
         <div class="titleIndexBasics">
@@ -150,19 +146,7 @@
 
     <div class="itemIndexBasics slide-in basics-from-left">
       <div class="item1IndexBasics">
-<<<<<<< HEAD
-        <a href="basics/water.html"><img class="imgBasics" src="images/gardeingwater.png" alt="water"></a>
-   </div>
-   <div class="item2IndexBasics">
-       <div class="titleIndexBasics">
-         WATER
-       </div>
-       <div class="descriptionIndexBasics">
-        <p>Learn about the importance of water!</p>
-        <p>The best gardeners always know the best timing and quantity!</p>
-=======
         <a href=""><img class="imgBasics" src="images/gardeingwater.png" alt="water"></a>
->>>>>>> 0eabf9fad366c2f46d54aba6e441cd6970bf8635
       </div>
       <div class="item2IndexBasics">
         <div class="titleIndexBasics">
@@ -236,7 +220,7 @@
 
 
     <div class="footer">
-      <div class="footerintro">
+      <div class="footerintro footer-fade-in categories-from-bottom">
         <span id="labelFooter">Gardenguru is made by
         <a href="https://github.com/tabacaruandrei">Tabacaru Andrei</a>,
         <a href="https://github.com/ArdeleanuGabriel">Ardeleanu Gabriel</a>
@@ -266,5 +250,6 @@
     <script type="text/javascript" src="scriptfile.js"></script>
     <script type="text/javascript" src="index_onload.js"></script>
     <script type="text/javascript" src="index_slidein.js"></script>
+    <script type="text/javascript" src="footer_slidein.js"></script>
   </body>
 </html>
