Responsive basics-water+tools

--- a/Gardenguru/basics/tools.html
+++ b/Gardenguru/basics/tools.html
@@ -101,7 +101,7 @@
 
     <div class="toolContainer">
          <div class="imgItem">
-           <img src="basicsImages/bowrake.png" alt="">
+           <img class="imgResp" src="basicsImages/bowrake.png" alt="">
          </div>
          <div class="textItem">
              <div class="titleTool">Bow rake</div>
@@ -117,7 +117,7 @@
 
     <div class="toolContainer">
         <div class="imgItem">
-          <img src="basicsImages/trowel.png" alt="">
+          <img class="imgResp" src="basicsImages/trowel.png" alt="">
         </div>
         <div class="textItem">
           <div class="titleTool">Trowel</div>
@@ -135,7 +135,7 @@
 
    <div class="toolContainer">
     <div class="imgItem">
-      <img src="basicsImages/spade.png" alt="">
+      <img class="imgResp" src="basicsImages/spade.png" alt="">
     </div>
     <div class="textItem">
       <div class="titleTool">Spade</div>
