--- a/Gardenguru/login.html
+++ b/Gardenguru/login.html
@@ -95,10 +95,10 @@
 
     </div> -->
 
-    <div class="accountIntro">
+    <div class="accountIntro login-from-top-background fade-in">
       <div class="introLogin"></div>
 
-      <div class="login">
+      <div class="login login-from-top-form fade-in">
         <form class="loginform" action="">
           <div class="title">Welcome back.</div>
           <div class="user-details">
@@ -131,7 +131,7 @@
 
 
     <div class="footer">
-      <div class="footerintro">
+      <div class="footerintro footer-fade-in categories-from-bottom">
         <span id="labelFooter">Gardenguru is made by
         <a href="https://github.com/tabacaruandrei">Tabacaru Andrei</a>,
         <a href="https://github.com/ArdeleanuGabriel">Ardeleanu Gabriel</a>
@@ -159,6 +159,7 @@
       </div>
     </div>
     <script type="text/javascript" src="scriptfile.js"></script>
+    <script type="text/javascript" src="register_onload.js"></script>
     <script type="text/javascript" src="login_verify.js"></script>
   </body>
 </html>
