--- a/Gardenguru/register.html
+++ b/Gardenguru/register.html
@@ -91,10 +91,10 @@
       </ul>
     </header>
 
-    <div class="accountIntro">
+    <div class="accountIntro login-from-top-background fade-in">
       <div class="introRegister"></div>
 
-      <div class="register">
+      <div class="register login-from-top-form fade-in">
         <form class="loginform" action="">
           <div class="title">Create your account.</div>
           <div class="user-details">
@@ -176,6 +176,7 @@
       </div>
     </div>
     <script type="text/javascript" src="scriptfile.js"></script>
+    <script type="text/javascript" src="register_onload.js"></script>
     <script type="text/javascript" src="register_verify.js"></script>
   </body>
 </html>
