Removing deprecated code

--- a/Gardenguru/login.html
+++ b/Gardenguru/login.html
@@ -131,7 +131,7 @@
 
 
     <div class="footer">
-      <div class="footerintro footer-fade-in categories-from-bottom">
+      <div class="footerintro">
         <span id="labelFooter">Gardenguru is made by
         <a href="https://github.com/tabacaruandrei">Tabacaru Andrei</a>,
         <a href="https://github.com/ArdeleanuGabriel">Ardeleanu Gabriel</a>
