--- a/Gardenguru/about.html
+++ b/Gardenguru/about.html
@@ -143,7 +143,7 @@
     </div>
 
     <div class="footer">
-      <div class="footerintro">
+      <div class="footerintro footer-fade-in categories-from-bottom"">
         <span id="labelFooter">Gardenguru is made by
         <a href="https://github.com/tabacaruandrei">Tabacaru Andrei</a>,
         <a href="https://github.com/ArdeleanuGabriel">Ardeleanu Gabriel</a>
