Major JS and CSS improvements
- added JS functionality for tools and partial JS functionality for water
- fixed CSS and improved responsiveness on index, tools and water
- improved CSS animations for about and index

--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body onload="getCurrentYear()">
+  <body>
 
 
     <header class="header">
@@ -250,6 +250,5 @@
     <script type="text/javascript" src="scriptfile.js"></script>
     <script type="text/javascript" src="index_onload.js"></script>
     <script type="text/javascript" src="index_slidein.js"></script>
-    <script type="text/javascript" src="footer_slidein.js"></script>
   </body>
 </html>
