Massive webpage and JS changes
- added CSS code for profile and login/register page
- login/register page now fade in on page load
- able to modify profile data using modify button(only innerHTML right now, database functionality will be added soon)

--- a/Gardenguru/basics/tools.html
+++ b/Gardenguru/basics/tools.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body onload="getCurrentYear()">
+  <body>
 
 
     <header class="header">
@@ -92,63 +93,66 @@
 
     
     <div class="toolsMainContainer">
-    <div class="toolsTitle">
-        Essential gardening tools and their usage
-    </div>
-    <div class="toolsImgMain">
-      <img src="basicsImages/toolsMain.jpg" class="imgMainRadius" alt="">
-    </div>
+      <div class="toolsTitle intro-fade-in tools-from-top">
+          Essential gardening tools and their usage
+      </div>
+      <div class="toolsImgMain intro-fade-in tools-from-top">
+        <img src="basicsImages/toolsMain.jpg" class="imgMainRadius" alt="">
+      </div>
 
-    <div class="toolContainer">
-         <div class="imgItem">
-           <img class="imgResp" src="basicsImages/bowrake.png" alt="">
-         </div>
-         <div class="textItem">
-             <div class="titleTool">Bow rake</div>
-             <div class="descriptionTool">
-                 <ul class="listSquare">
-                     <li>A bow rake is shaped very differently from your average leaf rake. The tines are short, only a few inches (5 to 10 cm.) long, and they are parallel to each other. The tines are perpendicular to the long, straight handle. They are strong and rigid, usually made of metal.</li>
-                     <li> There are quite a few common garden rake uses. It's good for cleaning up a lawn in the spring. Running the sharp, hard tines over the grass will both pick up any debris and pull away thickly matted, compacted dead turf.</li>
-                     <li> It's also very good for pushing around, grooming, and leveling material such as soil, mulch, gravel, and compost. The tines can be used for breaking up and spreading material, and the smooth side of the head can be used for more precision jobs of leveling the material out.</li>
-                </ul>
-             </div>
-         </div>
-    </div>
+      <div class="toolPadding">
 
-    <div class="toolContainer">
-        <div class="imgItem">
-          <img class="imgResp" src="basicsImages/trowel.png" alt="">
-        </div>
-        <div class="textItem">
-          <div class="titleTool">Trowel</div>
-          <div class="descriptionTool">
-              <ul class="listSquare">
-                  <li>A trowel will easily be among the most used and important tools in your arsenal.  </li>
-                  <li> It's essentially a handheld shovel that you'll use for moving soil, digging, removing weeds,mixing fertilizer and much more.</li>
-                  <li>They are also used for digging small holes, such for planting bulbs, annuals or perennials.
-                    It would take a lot of time and effort to dig a hole for a tree or shrub with a garden trowel. Garden trowels are also used to dig up weeds.</li>
-                  <li> Garden trowels come in all kinds of shapes and sizes and are typically made of a combination of plastic or wood handles with stainless steel.</li>
-             </ul>
+      </div>
+
+        <div class="toolContainer">
+          <div class="imgItem slide-in tooldescription-from-left">
+            <img class="imgResp" src="basicsImages/bowrake.png" alt="">
+          </div>
+          <div class="textItem">
+              <div class="titleTool slide-in tooldescription-from-left">Bow rake</div>
+              <div class="descriptionTool">
+                  <ul class="listSquare fade-in tooldescription-from-top">
+                      <li>A bow rake is shaped very differently from your average leaf rake. The tines are short, around 5 to 10 centimeters long, and they are parallel to each other. The tines are perpendicular to the long, straight handle. They are strong and rigid, usually being made of metal.</li>
+                      <li> The garden rake has quite a few common uses. It's good for cleaning up a lawn in the spring. Running the sharp, hard tines over the grass will both pick up any debris and pull away thickly matted, compacted dead turf.</li>
+                      <li> It's also very good for pushing around, grooming, and leveling material such as soil, mulch, gravel, and compost. The tines can be used for breaking up and spreading material, and the smooth side of the head can be used for more precision jobs of leveling the material out.</li>
+                  </ul>
+              </div>
           </div>
         </div>
-   </div>
 
-   <div class="toolContainer">
-    <div class="imgItem">
-      <img class="imgResp" src="basicsImages/spade.png" alt="">
-    </div>
-    <div class="textItem">
-      <div class="titleTool">Spade</div>
-      <div class="descriptionTool">
-          <ul class="listSquare">
-              <li>For jobs too big for your trowel, a spade will be your tool of choice. A spade is usually a short-handled shovel, often made with a rectangular blade and a perpendicular "D" handle for extra grip when digging.</li>
-              <li>Unlike a pointed, bowl-shaped shovel, which is best used for digging and breaking up soil, a spade is better suited for slicing through stubborn roots and moving loose soil.</li>
-              <li>The flat head design is ideal for digging holes or removing plants from the ground. It's important to note that a garden spade is better suited for loose soil that is not compacted or rocky.</li>
-         </ul>
-      </div>
-    </div>
-</div>
+        <div class="toolContainer">
+          <div class="imgItem">
+            <img class="imgResp" src="basicsImages/trowel.png" alt="">
+          </div>
+          <div class="textItem">
+            <div class="titleTool">Trowel</div>
+            <div class="descriptionTool">
+                <ul class="listSquare">
+                    <li>A trowel will easily be among the most important tools in your arsenal.</li>
+                    <li> It's essentially a handheld shovel that you'll use for moving soil, digging, removing weeds, mixing fertilizer and much more.</li>
+                    <li>They are also used for digging small holes in order to plant bulbs, annuals or perennials.
+                      As such, it would take a lot of time and effort to dig a hole for a tree or shrub with a garden trowel. Garden trowels are also used to dig up weeds.</li>
+                    <li> Garden trowels come in all kinds of shapes and sizes and are typically made of a combination of plastic or wood handles with stainless steel.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
+        <div class="toolContainer">
+          <div class="imgItem">
+            <img class="imgResp" src="basicsImages/spade.png" alt="">
+          </div>
+          <div class="textItem">
+            <div class="titleTool">Spade</div>
+            <div class="descriptionTool">
+                <ul class="listSquare">
+                    <li>For jobs too big for your trowel, a spade will be your tool of choice. A spade is usually a short-handled shovel, often made with a rectangular blade and a perpendicular "D" handle for extra grip when digging.</li>
+                    <li>Unlike a pointed, bowl-shaped shovel, which is best used for digging and breaking up soil, a spade is better suited for slicing through stubborn roots and moving loose soil.</li>
+                    <li>The flat head design is ideal for digging holes or removing plants from the ground. It's important to note that a garden spade is better suited for loose soil that is not compacted or rocky.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
     </div>
 
   
@@ -181,6 +185,7 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="scriptfile.js"></script>
+    <script type="text/javascript" src="../scriptfile.js"></script>
+    <script type="text/javascript" src="../tools.js"></script>
   </body>
 </html>
